Revision history for Perl extension Email::Simple.

2.000     2007-05-29
          huge improvement to speed of bodyless message parsing
            pointed out by Dan Dascalescu; thanks!
          fix tests to avoid requiring 5.6

1.999     2007-03-20
          fix bug 25496: deletion of headers affected the wrong range,
            sometimes deleting too many headers -- thanks, Nicholas Oxhoej!
          fix bug 24922: errant space in last header of CRLF-delim email
            thanks, Barry Downes and Alex Vandiver

1.998     2007-02-07
          MAJOR REFACTORING OF GUTS
          If you run Email::MIME, you MUST be running Email::MIME 1.857 or
            better.
          require Email::MIME 1.857 in Makefile.PL only if an older
            version is already installed
          boldly moving forward with refactored headers and
            Email::Simple:::Header
          greatly reduce memory footprint
          add crlf method to allow other modules to avoid ->{mycrlf}
          fix broken header-junk test

1.996    2006-11-27
  - do not wrap Content-Type field; it can cause Outlook to go nuts
    while this is a special case, it does not make E::S incorrect, as folding
    long headers is allowed (for aesthetics) and not mandated

1.995    2006-10-19
  - tentative refactoring of headers

1.992    2006-10-05

  - fix a number of bugs when setting multiple headers, which would often
    refuse to set more values than were currently present
  - added a test for prepending (rather than appending) headers; while E::S
    does not yet support this, the header behavior will be easier to replace in
    future versions, and this is a forward-looking test

1.990    2006-09-05

  - ->header('foo') returns false if there is no foo header (formerly '')
  - croak if an undef value is passed to new()

1.980    2006-08-17

  - fix _fold() to add a missing line ending [RT #20764] (Brian Cassidy)

1.970    2006-08-17

  - bring ->headers method into Email::Simple