@@ -3,6 +3,7 @@ Revision history for Perl extension Email::Simple.
 2.000     2007-05-29
           huge improvement to speed of bodyless message parsing
             pointed out by Dan Dascalescu; thanks!
+          more documentation of header class
           fix tests to avoid requiring 5.6
 
 1.999     2007-03-20
